feat: make the code undergo PEP8 standard

--- a/code/neural_netw.ipynb
+++ b/code/neural_netw.ipynb
@@ -2,32 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "14d489a4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "from typing import Dict, Any, List, Type, Union, Tuple\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import ParameterGrid\n",
-    "from sklearn.metrics import (\n",
-    "    precision_recall_fscore_support,\n",
-    "    roc_auc_score, average_precision_score,\n",
-    "    matthews_corrcoef, balanced_accuracy_score\n",
-    ")\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import (Input, Conv1D, BatchNormalization, ReLU,\n",
-    "                                     MaxPooling1D, Dropout, Bidirectional, LSTM,\n",
-    "                                     Dense, Multiply, Softmax, Lambda)\n",
-    "from tensorflow.keras.models import Model\n",
-    "import tensorflow.keras.backend as K\n",
+    "from tensorflow.keras import Model\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "from tensorflow.keras.utils import to_categorical"
+    "from tensorflow.keras.layers import (\n",
+    "    Input, Conv1D, BatchNormalization, ReLU,\n",
+    "    MaxPooling1D, Dropout, Bidirectional, LSTM,\n",
+    "    Dense, Multiply, Softmax, Lambda\n",
+    ")\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from sklearn.metrics import (\n",
+    "    balanced_accuracy_score, matthews_corrcoef,\n",
+    "    roc_auc_score, average_precision_score\n",
+    ")\n",
+    "from sklearn.model_selection import ParameterGrid\n",
+    "import tensorflow.keras.backend as K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1b24a973",
    "metadata": {},
    "outputs": [
@@ -54,20 +60,9 @@
     }
    ],
    "source": [
-    "X_train = pd.read_csv(\"../NN Datasets/x_train.csv\")\n",
-    "y_train = pd.read_csv(\"../NN Datasets/y_train.csv\")\n",
-    "X_train = X_train.drop([ X_train.columns[0], \"Init_Win_bytes_forward\" ], axis=1)\n",
-    "y_train = y_train.drop(y_train.columns[0], axis=1)\n",
-    "\n",
-    "X_val = pd.read_csv(\"..//NN Datasets//x_val.csv\")\n",
-    "y_val = pd.read_csv(\"..//NN Datasets//y_val.csv\")\n",
-    "X_val = X_val.drop([X_val.columns[0], 'Init_Win_bytes_forward'] , axis=1)\n",
-    "y_val = y_val.drop(y_val.columns[0], axis=1)\n",
-    "\n",
-    "X_test = pd.read_csv(\"../NN Datasets/x_test.csv\")\n",
-    "y_test = pd.read_csv(\"../NN Datasets/y_test.csv\")\n",
-    "X_test = X_test.drop([ X_test.columns[0], \"Init_Win_bytes_forward\" ], axis=1)\n",
-    "y_test = y_test.drop(y_test.columns[0], axis=1)"
+    "# Шляхи до даних\n",
+    "DATA_DIR = Path(\"../NN Datasets\")\n",
+    "RESULTS_PATH = Path(\"grid_search_val_test_metrics.csv\")"
    ]
   },
   {
@@ -77,9 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_size = 20\n",
-    "num_features = 34\n",
-    "num_classes = 7"
+    "WINDOW_SIZE = 20\n",
+    "NUM_FEATURES = 34  # кількість ознак у X\n",
+    "NUM_CLASSES = 7    # кількість класів для класифікації"
    ]
   },
   {
@@ -100,7 +95,21 @@
     }
    ],
    "source": [
-    "y_val['label_code'].unique()"
+    "PARAM_GRID: Dict[str, List[Any]] = {\n",
+    "    'filters': [32, 64, 128],\n",
+    "    'kernel_size': [3, 5, 7],\n",
+    "    'pool_size': [2, 3],\n",
+    "    'lstm_units': [64, 128, 256],\n",
+    "    'lstm_layers': [1, 2],\n",
+    "    'dropout_rate': [0.2, 0.3, 0.5],\n",
+    "    'recurrent_dropout': [0.1, 0.2],\n",
+    "    'activation': ['relu', 'selu'],\n",
+    "    'kernel_initializer': ['he_uniform', 'glorot_uniform'],\n",
+    "    'optimizer': [Adam, RMSprop],\n",
+    "    'optimizer__learning_rate': [1e-2, 1e-3, 1e-4],\n",
+    "    'batch_size': [64, 128, 256],\n",
+    "    'epochs': [10, 20, 50]\n",
+    "}"
    ]
   },
   {
@@ -110,33 +119,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_windowed_data(X, y, window_size, num_classes):\n",
-    "    # 1) Конвертуємо в numpy\n",
-    "    X_arr = X.values if hasattr(X, 'values') else np.asarray(X)\n",
-    "    y_arr = y.values.squeeze() if hasattr(y, 'values') else np.asarray(y).squeeze()\n",
-    "    \n",
-    "    # 2) Визначаємо, скільки повних вікон вміститься\n",
-    "    n_rows, n_features = X_arr.shape\n",
-    "    n_windows = n_rows // window_size\n",
-    "    n_use = n_windows * window_size\n",
-    "    if n_use != n_rows:\n",
-    "        print(f\"– Обрізаю {n_rows - n_use} рядків (залишаю {n_use} для {n_windows} вікон)\")\n",
-    "    \n",
-    "    # 3) Обрізка\n",
-    "    X_trim = X_arr[:n_use]\n",
-    "    y_trim = y_arr[:n_use]\n",
-    "    \n",
-    "    # 4) reshape X → (n_windows, window_size, n_features)\n",
-    "    X_windows = X_trim.reshape(n_windows, window_size, n_features)\n",
-    "    \n",
-    "    # 5) reshape y → (n_windows, window_size) й беремо останню мітку вікна\n",
-    "    y_mat = y_trim.reshape(n_windows, window_size)\n",
-    "    y_last = y_mat[:, -1]\n",
-    "    \n",
-    "    # 6) one-hot\n",
-    "    y_windows = to_categorical(y_last, num_classes)\n",
-    "    \n",
-    "    return X_windows, y_windows"
+    "CALLBACKS = [\n",
+    "    EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True),\n",
+    "    ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, min_lr=1e-6)\n",
+    "]"
    ]
   },
   {
@@ -156,12 +142,17 @@
     }
    ],
    "source": [
-    "window_size = 20\n",
-    "num_classes = 7\n",
+    "def load_csv(path: Path, drop_cols: List[str]) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Завантажує CSV у DataFrame та видаляє непотрібні стовпці.\n",
     "\n",
-    "X_train, y_train = prepare_windowed_data(X_train, y_train, window_size, num_classes)\n",
-    "X_val,   y_val   = prepare_windowed_data(X_val,   y_val,   window_size, num_classes)\n",
-    "X_test,  y_test  = prepare_windowed_data(X_test,  y_test,  window_size, num_classes)"
+    "    :param path: шлях до файлу CSV\n",
+    "    :param drop_cols: список назв колонок для видалення\n",
+    "    :return: очищений DataFrame\n",
+    "    \"\"\"\n",
+    "    df = pd.read_csv(path)\n",
+    "    df = df.drop(columns=drop_cols, errors='ignore')\n",
+    "    return df"
    ]
   },
   {
@@ -181,9 +172,33 @@
     }
    ],
    "source": [
-    "print(f\"X_train: {X_train.shape}\")\n",
-    "print(f\"X_val: {X_val.shape}\")\n",
-    "print(f\"X_test: {X_test.shape}\")"
+    "def prepare_windowed_data(\n",
+    "    X: pd.DataFrame,\n",
+    "    y: pd.DataFrame,\n",
+    "    window_size: int,\n",
+    "    num_classes: int\n",
+    ") -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    \"\"\"\n",
+    "    Розбиває послідовність на вікна фіксованого розміру і повертає X у форматі\n",
+    "    (num_windows, window_size, num_features) та one-hot закодовані мітки за останній\n",
+    "    елемент кожного вікна.\n",
+    "    \"\"\"\n",
+    "    X_arr = X.values\n",
+    "    y_arr = y.values.squeeze()\n",
+    "\n",
+    "    n_rows = X_arr.shape[0]\n",
+    "    n_windows = n_rows // window_size\n",
+    "    usable = n_windows * window_size\n",
+    "    if usable < n_rows:\n",
+    "        print(f\"Обрізаю {n_rows - usable} рядків до {usable} для {n_windows} вікон\")\n",
+    "\n",
+    "    X_trim = X_arr[:usable]\n",
+    "    y_trim = y_arr[:usable]\n",
+    "\n",
+    "    X_windows = X_trim.reshape(n_windows, window_size, X_arr.shape[1])\n",
+    "    y_last = y_trim.reshape(n_windows, window_size)[:, -1]\n",
+    "    y_windows = to_categorical(y_last, num_classes)\n",
+    "    return X_windows, y_windows"
    ]
   },
   {
@@ -194,60 +209,62 @@
    "outputs": [],
    "source": [
     "def create_model(\n",
-    "    filters=64,\n",
-    "    kernel_size=3,\n",
-    "    pool_size=2,\n",
-    "    lstm_units=128,\n",
-    "    lstm_layers=1,\n",
-    "    dropout_rate=0.3,\n",
-    "    recurrent_dropout=0.1,\n",
-    "    activation='relu',\n",
-    "    kernel_initializer='he_uniform',\n",
-    "    optimizer='adam',\n",
-    "    optimizer__learning_rate=1e-3\n",
-    "):\n",
+    "    window_size: int,\n",
+    "    num_features: int,\n",
+    "    num_classes: int,\n",
+    "    params: Dict[str, Any]\n",
+    ") -> Model:\n",
+    "    \"\"\"\n",
+    "    Будує 1D-CNN + BiLSTM модель з механізмом уваги на основі параметрів.\n",
+    "\n",
+    "    :param window_size: довжина вікна часових рядів\n",
+    "    :param num_features: кількість ознак\n",
+    "    :param num_classes: кількість класів для класифікації\n",
+    "    :param params: словник з гіперпараметрами\n",
+    "    :return: скомпільована модель Keras\n",
+    "    \"\"\"\n",
     "    inp = Input(shape=(window_size, num_features))\n",
     "    x = inp\n",
-    "    # 1D-CNN block\n",
-    "    x = Conv1D(filters, kernel_size, padding='same',\n",
-    "               kernel_initializer=kernel_initializer)(x)\n",
+    "\n",
+    "    # Блок CNN\n",
+    "    x = Conv1D(params['filters'], params['kernel_size'], padding='same',\n",
+    "               kernel_initializer=params['kernel_initializer'])(x)\n",
     "    x = BatchNormalization()(x)\n",
     "    x = ReLU()(x)\n",
-    "    x = Conv1D(filters, kernel_size+2, padding='same',\n",
-    "               kernel_initializer=kernel_initializer)(x)\n",
+    "    x = Conv1D(params['filters'], params['kernel_size'] + 2, padding='same',\n",
+    "               kernel_initializer=params['kernel_initializer'])(x)\n",
     "    x = BatchNormalization()(x)\n",
     "    x = ReLU()(x)\n",
-    "    x = MaxPooling1D(pool_size)(x)\n",
-    "    x = Dropout(dropout_rate)(x)\n",
+    "    x = MaxPooling1D(params['pool_size'])(x)\n",
+    "    x = Dropout(params['dropout_rate'])(x)\n",
     "\n",
-    "    # BiLSTM block\n",
-    "    for _ in range(lstm_layers):\n",
-    "        x = Bidirectional(LSTM(lstm_units,\n",
-    "                               return_sequences=True,\n",
-    "                               dropout=dropout_rate,\n",
-    "                               recurrent_dropout=recurrent_dropout))(x)\n",
-    "    x = Dropout(dropout_rate)(x)\n",
+    "    # Блок BiLSTM\n",
+    "    for _ in range(params['lstm_layers']):\n",
+    "        x = Bidirectional(\n",
+    "            LSTM(params['lstm_units'], return_sequences=True,\n",
+    "                 dropout=params['dropout_rate'],\n",
+    "                 recurrent_dropout=params['recurrent_dropout'])\n",
+    "        )(x)\n",
+    "    x = Dropout(params['dropout_rate'])(x)\n",
     "\n",
-    "    # Attention mechanism\n",
-    "    attn_scores = Dense(1, activation='tanh')(x)\n",
-    "    attn_scores = Softmax(axis=1)(attn_scores)\n",
-    "    context = Multiply()([x, attn_scores])\n",
+    "    # Механізм уваги\n",
+    "    attn = Dense(1, activation='tanh')(x)\n",
+    "    attn = Softmax(axis=1)(attn)\n",
+    "    context = Multiply()([x, attn])\n",
     "    context = Lambda(lambda z: K.sum(z, axis=1))(context)\n",
-    "    # Classification head\n",
-    "    x = Dense(128, activation=activation,\n",
-    "              kernel_initializer=kernel_initializer)(context)\n",
-    "    x = Dropout(dropout_rate)(x)\n",
+    "\n",
+    "    # Голова класифікації\n",
+    "    x = Dense(128, activation=params['activation'],\n",
+    "              kernel_initializer=params['kernel_initializer'])(context)\n",
+    "    x = Dropout(params['dropout_rate'])(x)\n",
     "    out = Dense(num_classes, activation='softmax')(x)\n",
     "\n",
-    "    model = Model(inp, out)\n",
-    "\n",
-    "    # Підбираємо оптимізатор\n",
-    "    opt = (optimizer(learning_rate=optimizer__learning_rate)\n",
-    "           if isinstance(optimizer, type)\n",
-    "           else optimizer)\n",
+    "    model = Model(inputs=inp, outputs=out)\n",
+    "    optimizer_cls: Union[Type[tf.keras.optimizers.Optimizer], tf.keras.optimizers.Optimizer] = params['optimizer']\n",
+    "    optimizer = optimizer_cls(learning_rate=params['optimizer__learning_rate'])\n",
     "\n",
     "    model.compile(\n",
-    "        optimizer=opt,\n",
+    "        optimizer=optimizer,\n",
     "        loss='categorical_crossentropy',\n",
     "        metrics=['accuracy']\n",
     "    )\n",
@@ -261,21 +278,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {\n",
-    "    'filters':      [32, 64, 128],\n",
-    "    'kernel_size':  [3, 5, 7],\n",
-    "    'pool_size':    [2, 3],\n",
-    "    'lstm_units':   [64, 128, 256],\n",
-    "    'lstm_layers':  [1, 2],\n",
-    "    'dropout_rate': [0.2, 0.3, 0.5],\n",
-    "    'recurrent_dropout': [0.1, 0.2],\n",
-    "    'activation':   ['relu', 'selu'],\n",
-    "    'kernel_initializer': ['he_uniform', 'glorot_uniform'],\n",
-    "    'optimizer':           [tf.keras.optimizers.Adam, tf.keras.optimizers.RMSprop],\n",
-    "    'optimizer__learning_rate': [1e-2, 1e-3, 1e-4],\n",
-    "    'batch_size':          [64, 128, 256],\n",
-    "    'epochs':              [10, 20, 50]\n",
-    "}"
+    "def evaluate_model(\n",
+    "    model: Model,\n",
+    "    X_test: np.ndarray,\n",
+    "    y_test: np.ndarray\n",
+    ") -> Dict[str, float]:\n",
+    "    \"\"\"\n",
+    "    Обчислює набір метрик для тестового набору.\n",
+    "    \"\"\"\n",
+    "    y_prob = model.predict(X_test, verbose=0)\n",
+    "    y_pred = np.argmax(y_prob, axis=1)\n",
+    "    y_true = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "    return {\n",
+    "        'accuracy': np.mean(y_pred == y_true),\n",
+    "        'balanced_accuracy': balanced_accuracy_score(y_true, y_pred),\n",
+    "        'mcc': matthews_corrcoef(y_true, y_pred),\n",
+    "        'roc_auc': roc_auc_score(y_true, y_prob, multi_class='ovo', average='macro'),\n",
+    "        'avg_precision': average_precision_score(y_true, y_prob, average='macro')\n",
+    "    }\n"
    ]
   },
   {
@@ -298,45 +319,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = []\n",
+    "def run_grid_search():\n",
+    "    \"\"\"\n",
+    "    Виконує перебір гіперпараметрів за PARAM_GRID,\n",
+    "    навчає та оцінює модель, зберігає результати.\n",
+    "    \"\"\"\n",
+    "    # Завантаження даних\n",
+    "    X_train_df = load_csv(DATA_DIR / 'x_train.csv',\n",
+    "                           drop_cols=['Unnamed: 0', 'Init_Win_bytes_forward'])\n",
+    "    y_train_df = load_csv(DATA_DIR / 'y_train.csv', drop_cols=['Unnamed: 0'])\n",
+    "    X_val_df = load_csv(DATA_DIR / 'x_val.csv', drop_cols=['Unnamed: 0', 'Init_Win_bytes_forward'])\n",
+    "    y_val_df = load_csv(DATA_DIR / 'y_val.csv', drop_cols=['Unnamed: 0'])\n",
+    "    X_test_df = load_csv(DATA_DIR / 'x_test.csv', drop_cols=['Unnamed: 0', 'Init_Win_bytes_forward'])\n",
+    "    y_test_df = load_csv(DATA_DIR / 'y_test.csv', drop_cols=['Unnamed: 0'])\n",
     "\n",
-    "for params in ParameterGrid(param_grid):\n",
-    "    print('Training with params:', params)\n",
+    "    # Підготовка вікон\n",
+    "    X_train, y_train = prepare_windowed_data(X_train_df, y_train_df, WINDOW_SIZE, NUM_CLASSES)\n",
+    "    X_val, y_val = prepare_windowed_data(X_val_df, y_val_df, WINDOW_SIZE, NUM_CLASSES)\n",
+    "    X_test, y_test = prepare_windowed_data(X_test_df, y_test_df, WINDOW_SIZE, NUM_CLASSES)\n",
     "\n",
-    "    model_kwargs = {k:v for k,v in params.items()\n",
-    "                    if k not in ('batch_size','epochs')}\n",
-    "                                 \n",
-    "    model = create_model(**model_kwargs)\n",
-    "    # Навчання на train з валідацією на val\n",
-    "    history = model.fit(\n",
-    "        X_train, y_train,\n",
-    "        validation_data=(X_val, y_val),\n",
-    "        batch_size=params['batch_size'],\n",
-    "        epochs=params['epochs'],\n",
-    "        verbose=1,\n",
-    "        callbacks=callbacks\n",
-    "    )\n",
+    "    results: List[Dict[str, Any]] = []\n",
     "\n",
-    "    y_test_prob = model.predict(X_test)\n",
-    "    y_test_pred = np.argmax(y_test_prob, axis=1)\n",
+    "    for params in ParameterGrid(PARAM_GRID):\n",
+    "        print(f\"Навчання з параметрами: {params}\")\n",
+    "        # Відділяємо аргументи для моделі\n",
+    "        model_params = {k: v for k, v in params.items()\n",
+    "                        if k not in ('batch_size', 'epochs')}\n",
+    "        model = create_model(WINDOW_SIZE, NUM_FEATURES, NUM_CLASSES, model_params)\n",
     "\n",
-    "    test_acc     = np.mean(y_test_pred == y_test)\n",
-    "    test_bal_acc = balanced_accuracy_score(y_test, y_test_pred)\n",
-    "    test_mcc     = matthews_corrcoef(y_test, y_test_pred)\n",
-    "    test_roc_auc = roc_auc_score(y_test, y_test_prob,\n",
-    "                                 multi_class='ovo', average='macro')\n",
-    "    test_avg_prec= average_precision_score(y_test, y_test_prob, average='macro')\n",
-    "    \n",
-    "    # Збереження результатів\n",
-    "    row = params.copy()\n",
-    "    row.update({\n",
-    "        'test_accuracy': test_acc,\n",
-    "        'test_balanced_accuracy': test_bal_acc,\n",
-    "        'test_mcc': test_mcc,\n",
-    "        'test_roc_auc': test_roc_auc,\n",
-    "        'test_average_precision': test_avg_prec\n",
-    "    })\n",
-    "    results.append(row)"
+    "        # Навчання\n",
+    "        model.fit(\n",
+    "            X_train, y_train,\n",
+    "            validation_data=(X_val, y_val),\n",
+    "            batch_size=params['batch_size'],\n",
+    "            epochs=params['epochs'],\n",
+    "            callbacks=CALLBACKS,\n",
+    "            verbose=1\n",
+    "        )\n",
+    "        # Оцінка\n",
+    "        metrics = evaluate_model(model, X_test, y_test)\n",
+    "        # Збереження рядка результатів\n",
+    "        row = {**params, **{\n",
+    "            'test_accuracy': metrics['accuracy'],\n",
+    "            'test_balanced_accuracy': metrics['balanced_accuracy'],\n",
+    "            'test_mcc': metrics['mcc'],\n",
+    "            'test_roc_auc': metrics['roc_auc'],\n",
+    "            'test_avg_precision': metrics['avg_precision']\n",
+    "        }}\n",
+    "        results.append(row)\n",
+    "        # Очищення сесії для звільнення пам'яті\n",
+    "        tf.keras.backend.clear_session()\n",
+    "\n",
+    "    df_results = pd.DataFrame(results)\n",
+    "    df_results.to_csv(RESULTS_PATH, index=False)\n",
+    "    print(f\"Збережено результати у {RESULTS_PATH}\")"
    ]
   },
   {
@@ -346,10 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_results = pd.DataFrame(results)\n",
-    "print(df_results)\n",
-    "\n",
-    "df_results.to_csv('grid_search_val_test_metrics.csv', index=False)"
+    "run_grid_search()"
    ]
   }
  ],
